<resources>
    <string name="app_name">myapplication</string>
    <string name="username_hint">User Name</string>
    <string name="nickname_hint">Nick Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confrim password</string>
    <string name="register_button_text">Register</string>
    <string name="log_in_button_text">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">send</string>
    <string name="message_hint">Enter message</string>
    <string name="baseUrl">http://10.0.2.2:5000/api/</string>
    <string name="preference_file_key" />
    <string name="dark_light_mode" />
    <string name="light_mode" />
    <string name="dark_mode" />
    <string-array name="contacts_display_names">
        <item>Or</item>
        <item>John</item>
        <item>Hila</item>
    </string-array>

    <string-array name="contacts_last_msgs">
        <item>Bye!</item>
        <item>Hi</item>
        <item>OK?</item>
    </string-array>

    <string-array name="contacts_last_dates">
        <item>16/06/2023</item>
        <item>11/06/2023</item>
        <item>06/06/2023</item>
    </string-array>

</resources>