<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="#202b36">

    <Button
        android:id="@+id/register_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginTop="64dp"
        android:text="@string/register_button_text"
        android:textColor="#FFFFFF"
        android:background="#54788d"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="147dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/avatar"
            android:layout_alignBottom="@+id/avatar"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="0dp"
            android:rotationX="-2"
            android:src="@drawable/baseline_add_a_photo_24" />

    </RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/nickname_hint"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname"
        android:layout_marginTop="29dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd"
        android:backgroundTint="#FFFFFF"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="18dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="8dp"
        android:text="@string/log_in_button_text"
        android:textColor="#FFFFFF"
        android:background="#54788d"/>

</RelativeLayout>
