<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#202b36">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chat App"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />



    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd"
        android:backgroundTint="#FFFFFF"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/username"
        android:textColor="#FFFFFF"
        android:textColorHint="#bdbdbd"
        android:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="19dp"

        android:background="#54788d"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:background="#54788d"
        android:layout_toStartOf="@+id/register_button"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

</RelativeLayout>